[project]
name = "adivinha"
version = "0.1.0"
description = "\"Mini Game feito em Python utilizando Random\""
authors = [
    {name = "IC4R0",email = "Icaro.MSantos@hotmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyfiglet (==1.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
